--- a/index_uk.html
+++ b/index_uk.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="language">
-        <a href="/index_uk.html">Українська</a> <a href="/index_en.html">English</a>
+        <a href="/index.html">Українська</a> <a href="/index_en.html">English</a>
     </div>
     <div class="MyCv"><img class="MyPhoto" src="/image/me.jpg" >
         <div class="MyName"> <h1><strong>Гуслистий Артем Олександрович</strong></h1>
