--- a/index_en.html
+++ b/index_en.html
@@ -12,7 +12,7 @@
     <div class="language">
         <a href="/index.html">Українська</a> <a href="/index_en.html">English</a>
     </div>
-    <div class="MyCv"><img class="MyPhoto" src="/image/me.jpg" >
+    <div class="MyCv"><img class="MyPhoto" src="image/me.jpg" >
         <div class="MyName"> <h1><strong>Artem Huslystyi</strong></h1>
         </div>
         <p><strong>Email:</strong><a href="mailto:guslistyj@i.ua">guslistyj@i.ua</a>; <a href="mailto:guslistyj.a@gmail.com">guslistyj.a@gmail.com</a></p>
