--- a/index_en.html
+++ b/index_en.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="language">
-        <a href="index.html">Українська</a> <a href="index_en.html">English</a>
+        <a href="beetroot-homework-1/index.html">Українська</a> <a href="beetroot-homework-1/index_en.html">English</a>
     </div>
     <div class="MyCv"><img class="MyPhoto" src="image/me.jpg" >
         <div class="MyName"> <h1><strong>Artem Huslystyi</strong></h1>
