--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <div class="language">
+        <strong>Мова:</strong>
         <a href="beetroot-homework-1/index.html">Українська</a> <a href="beetroot-homework-1/index_en.html">English</a>
     </div>
     <div class="MyCv"><img class="MyPhoto" src="image/me.jpg" >
